--- a/style.css
+++ b/style.css
@@ -176,6 +176,8 @@ a {
 }
 
 .user-image {
+    height :400px;
+    width:400px
     padding: 2.5rem;
     filter: grayscale(1);
     transition: all 1s;
