--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ a {
 
 .user-image {
     height :40px;
-    width:40px
+    width:40px;
     padding: 2.5rem;
     filter: grayscale(1);
     transition: all 1s;
